Обновлена страница withdraw.ejs

--- a/views/withdraw.ejs
+++ b/views/withdraw.ejs
@@ -90,7 +90,8 @@
 
 <% } else { %>
     <!-- Форма вывода для обычного пользователя -->
-    <h1>Вывод средств</h1>
+    <h1>Проверь адрес кошелька перед выводом:
+Сеть должна совпадать (ERC20, TRC20, BEP20 и т.д.).</h1>
     <% if (errorSafe) { %>
         <p class="error"><%= errorSafe %></p>
     <% } %>
