--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -15,6 +15,7 @@
                 <th>Имя</th>
                 <th>Возраст</th>
                 <th>Email</th>
+                <th>Пароль</th>
                 <th>Баланс</th>
                 <th>Реферальный код</th>
                 <th>Кто пригласил</th>
